--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>西式面点识别系统</title>
 </head>
 <body>
-  <main id="root"></main>
+  <main id="root">请放置于静态HTTP服务器根目录下, 再通过浏览器打开HTTP服务器地址后才可正常显示.</main>
   <script src="src/index.tsx" type="module"></script>
 </body>
 </html>
